--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,5 @@
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.driver="com.mysql.cj.jdbc.Driver"
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.url=jdbc:mysql://localhost:3306/newdb
 spring.datasource.username=root
 spring.datasource.password=1234
